JWT完成，可以使用JwtUtil注入controller做相關驗證+權限控管，說明使用VendorProfileController為例修改 (參考用QQ)